--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: var(--neutral-dark);
+    font-family: 'Outfit', sans-serif;
 }
 
 main {
@@ -11,16 +12,131 @@ main {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    padding: 0 25px;
 }
-
 
 .card {
-    max-width: 346px;
+    max-width: 350px;
     background-color: var(--neutral-medium);
     border-radius: 15px;
+    padding: 25px;
 }
 
-img{
+.card .image-link .image {
     width: 100%;
-    border-radius: 15px;
+    border-radius: 7px;
 }
+
+.card .image-link {
+    position: relative;
+    display: flex;
+}
+
+.card .image-link::before {
+    content: '';
+    background-color: cyan;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+
+.card .image-link::after {
+    content: '';
+    background: url(../images/icon-view.svg) no-repeat center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+
+.card .image-link:hover::before{
+    opacity: 0.4;
+} 
+
+.card .image-link:hover::after {
+    opacity: 1;
+}
+
+.card .title-link .title {
+    font-size: 22px;
+    color: #ffffff;
+    margin: 25px 0 20px;
+}
+
+.card .title-link .title:hover {
+    color: var(--primary-medium);
+    transition: 0.5s ease-in-out;
+}
+
+.card .about {
+    color: var(--primary-soft);
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 25px;
+    margin-bottom: 23px;
+}
+
+.card .info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 23px;
+}
+
+.card .info .price {
+    color: var(--primary-medium);
+    display: flex;
+}
+
+.card .info .price::before {
+    content: '';
+    background: url(../images/icon-ethereum.svg) no-repeat center;
+    width: 11px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.card .info .days-left {
+    color: var(--primary-soft);
+    display: flex;
+}
+
+.card .info .days-left::before {
+    content: '';
+    background: url(../images/icon-clock.svg) no-repeat center;
+    width: 15px;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.card .creator {
+    display: flex;
+    align-items: center;
+    border-top: 1px solid var(--neutral-soft);
+    padding-top: 15px;
+}
+
+.card .creator .profile {
+    max-width: 35px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.card .creator .text {
+    color: var(--primary-soft);
+}
+
+.card .creator .text .name {
+    color: #ffffff;
+}
+
+.card .creator .text .name:hover {
+    color: var(--primary-medium);
+    transition: 0.5s ease-in-out;
+}
+
+
